kubernetes/worker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: ll2
  name: worker
spec:
  selector:
    matchLabels:
      llappName: worker
  serviceName: worker
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      namespace: ll2
      labels:
        llappName: worker
    spec:
      containers:
      - command: [ "/bin/sh", "-c"]
        args:
        - node worker/dist/server
        image: $YOUR_CONTAINER_REGISTRY/learninglocker2-app:dev
        name: worker
        resources: {}
        volumeMounts:
        - mountPath: /opt/learninglocker/storage
          name: worker-claim
      restartPolicy: Always
      imagePullSecrets:
        - name:  acr-auth
  volumeClaimTemplates:
  - metadata:
      name: worker-claim
    spec:
      storageClassName: azurefile
      accessModes: [ "ReadWriteMany" ]
      resources:
        requests:
          storage: 5Gi
