kubernetes/api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ll2
spec:
  ports:
  - port: 8080
    name: client
  selector:
    llappName: api
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: ll2
  name: api
spec:
  selector:
    matchLabels:
      llappName: api
  serviceName: api
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      namespace: ll2
      labels:
        llappName: api
    spec:
      containers:
      - command: [ "/bin/sh", "-c"]
        args:
        - node api/dist/server
        image: $YOUR_CONTAINER_REGISTRY/learninglocker2-app:dev
        name: api
        ports:
          - containerPort: 8080
        volumeMounts:
        - mountPath: /opt/learninglocker/storage
          name: api-claim
      restartPolicy: Always
      imagePullSecrets:
        - name:  acr-auth
  volumeClaimTemplates:
  - metadata:
      name: api-claim
    spec:
      storageClassName: azurefile
      accessModes: [ "ReadWriteMany" ]
      resources:
        requests:
          storage: 5Gi
