kubernetes/nginx-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ll2
spec:
  type:  LoadBalancer
  selector:
    llappName: nginx
  ports:
  - name: "443"
    port: 443
    targetPort: 443
  - name: "80"
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ll2
  labels:
    llappName: nginx
  name: nginx
spec:
  selector:
    matchLabels:
      llappName: nginx
  replicas: 1
  template:
    metadata:
      namespace: ll2
      labels:
        llappName: nginx
    spec:
      containers:
      - env:
        - name: DOMAIN_NAME
        image: podiumnextunstable.azurecr.io/learninglocker2-nginx:dev
        name: nginx
        ports:
        - containerPort: 443
        - containerPort: 80
        resources: {}
      restartPolicy: Always
