kubernetes/ui-stateful.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: ll2
spec:
  selector:
    llappName: ui
  ports:
  - port:  3000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: ll2
  name: ui
spec:
  selector:
    matchLabels:
      llappName: ui
  serviceName: ui
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      namespace: ll2
      labels:
        llappName: ui
    spec:
      containers:
      - args:
        - ./entrypoint-ui.sh
        image: podiumnextunstable.azurecr.io/learninglocker2-app:dev
        name: ui
        resources: {}
        volumeMounts:
        - mountPath: /opt/learninglocker/storage
          name: ui-claim
      restartPolicy: Always
      imagePullSecrets:
        - name:  acr-auth
  volumeClaimTemplates:
  - metadata:
      name: ui-claim
    spec:
      storageClassName: azurefile
      accessModes: [ "ReadWriteMany" ]
      resources:
        requests:
          storage: 5Gi
