kubernetes/xapi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xapi
  namespace: ll2
spec:
  selector:
    llappName: xapi
  ports:
  - port:  8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ll2
  labels:
    llappName: xapi
  name: xapi
spec:
  selector:
    matchLabels:
      llappName: xapi
  replicas: 1
  template:
    metadata:
      namespace: ll2
      labels:
        llappName: xapi
    spec:
      containers:
      - env:
        - name: MONGO_URL
          value: $MONGO_DB_CONNECTION_STRING
        - name: REDIS_URL
          value: redis://redis.ll2.svc.cluster.local:6379/0
        - name: LOG_MIN_LEVEL
          value: silly
        image: learninglocker/xapi-service:v1.1.0
        name: xapi
        ports:
        - containerPort: 8081
      restartPolicy: Always
