kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 annotations:
  kubernetes.io/ingress.class: nginx
  nginx.ingress.kubernetes.io/ssl-redirect: "false"
  nginx.ingress.kubernetes.io/rewrite-target: /
 name: ll2
 namespace: ll2
spec:
 rules:
 - http:
    paths:
    - path: /
      backend:
       serviceName: ui
       servicePort: 3000
    - path: /api
      backend:
       serviceName: api
       servicePort: 8080
    - path: /xapi
      backend:
       serviceName: xapi
       servicePort: 8081
